Pages in progress

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,24 +1,38 @@
-<section class="about-me">
-    <h1 class="about-me__title">
-      About me.
-    </h1>
-    <p class="about-me__paragraph">
-        It won’t be a bigger problem to ﬁnd one video game lover in your neighbor. 
-        Since the introduction of Virtual Game, 
-        it has been achieving great heights so far as its popularity and technological advancement are concerned. 
-        The history of video game is as interesting as a fairy tale.
-        The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever. 
-        During the formulative years, video games were created by using various interactive electronic devices with various 
-        display formats. 
-        The ﬁrst ever video game was
-    </p>
-    <div class="about-me__languages">
-      <img class="about-me__languages-item">
-    </div>
-    <img class="about-me__image">
-    <div class="about-me__scrolldown">
-        <p class="about-me__scrolldown-paragraph">
-            View the projects i've worked on
+<section class="about">
+    <section class="about-me">
+        <h1 class="about-me__title">
+        About me.
+        </h1>
+        <p class="about-me__paragraph">
+            It won’t be a bigger problem to ﬁnd one video game lover in your neighbor. 
+            Since the introduction of Virtual Game, 
+            it has been achieving great heights so far as its popularity and technological advancement are concerned. 
+            The history of video game is as interesting as a fairy tale.
+            The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever. 
+            During the formulative years, video games were created by using various interactive electronic devices with various 
+            display formats. 
+            The ﬁrst ever video game was
         </p>
-    </div>
+        <div class="about-me__languages">
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+        </div>
+    </section>
+    <section class="image">
+        <div class="image__item"><img src="http://via.placeholder.com/450x600"></div>
+    </section>
+    <section class="skew">
+        <div class="skew__scrolldown">
+            <p class="skew__scrolldown-paragraph">
+                View the projects i've worked on
+            </p>
+        </div>
+    </section>
 </section>
