--- a/src/app/blog-overview/blog-overview.component.html
+++ b/src/app/blog-overview/blog-overview.component.html
@@ -8,6 +8,7 @@
   </div>
 
   <div class="blog-overview__list">
+
     <div class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
@@ -16,6 +17,36 @@
         Are You Ready To Buy A Home Theater Audio System 
       </div>
     </div>
+
+    <div class="blog-overview__list-item">
+        <div class="blog-overview__list-item-date">
+          dd / mm / yyyy
+        </div>
+        <div class="blog-overview__list-item-title">
+          How To Put Movies On Iphone 
+        </div>
+      </div>
+
+      <div class="blog-overview__list-item">
+        <div class="blog-overview__list-item-date">
+          dd / mm / yyyy
+        </div>
+        <div class="blog-overview__list-item-title">
+          Computer Hardware Desktops And Notebooks  
+        </div>
+      </div>
+
+      <div class="blog-overview__list-item">
+        <div class="blog-overview__list-item-date">
+          dd / mm / yyyy
+        </div>
+        <div class="blog-overview__list-item-title">
+          Are You Ready To Buy A Home Theater Audio System 
+        </div>
+      </div>
+
+      <div class="blog-overview__list-arrow"></div>
+
   </div>
 
 </section>
