--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,13 @@
   <p class="welcome__paragraph">
     “Nice to meet you, I’m Jeroen a Front-end Developer”
   </p>
-  <div class="welcome__scrolldown">
-      <p class="welcome__scrolldown-paragraph">
-          Meet me! Scroll down
+  <div class="welcome__skew">
+      <p class="welcome__skew-meetme">
+          Meet me!
       </p>
+      <p class="welcome__skew-scrolldown">
+          Scroll down 
+      </p>
+      <div class="welcome__skew-arrow"></div>
   </div>
 </section>
