--- a/src/app/project-overview/project/project.component.html
+++ b/src/app/project-overview/project/project.component.html
@@ -33,31 +33,31 @@
   </section>
 
   <section class="images">
-    <img class="images__wide">
-    <img class="images__small">
-    <img class="images__small">
+    <div class="images__item images__item-wide"><img src="http://via.placeholder.com/600x300"></div>
+    <div class="images__item images__item-small"><img src="http://via.placeholder.com/300x300"></div>
+    <div class="images__item images__item-small"><img src="http://via.placeholder.com/300x300"></div>
   </section>
 
   <section class="sidemenu">  
-    <button class="sidemenu__btn" routerLink="/">
+    <a class="sidemenu__btn" routerLink="/">
       <h3 class="sidemenu__btn-number">1</h3>
       <h4 class="sidemenu__btn-title">Title of project</h4>
-    </button>
-    <button class="sidemenu__btn" routerLink="/">
+    </a>
+    <a class="sidemenu__btn" routerLink="/">
       <h3 class="sidemenu__btn-number">2</h3>
       <h4 class="sidemenu__btn-title">Title of project</h4>
-    </button>
-    <button class="sidemenu__btn" routerLink="/">
+    </a>
+    <a class="sidemenu__btn" routerLink="/">
       <h3 class="sidemenu__btn-number">3</h3>
       <h4 class="sidemenu__btn-title">Title of project</h4>
-    </button>
-    <button class="sidemenu__btn" routerLink="/">
+    </a>
+    <a class="sidemenu__btn" routerLink="/">
       <h3 class="sidemenu__btn-number">4</h3>
       <h4 class="sidemenu__btn-title">Title of project</h4>
-    </button>
-    <button class="sidemenu__btn" routerLink="/">
+    </a>
+    <a class="sidemenu__btn" routerLink="/">
       <h3 class="sidemenu__btn-number">5</h3>
       <h4 class="sidemenu__btn-title">Title of project</h4>
-    </button>
+    </a>
   </section>
 </section>
