--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,20 +19,38 @@
         margin: 10px 0;
     }
 
-    &__scrolldown {
+    &__skew {
+        @include skew (-20deg);
+        display: flex;
+        flex-direction: column;
+        text-align: center;
         position: absolute;
-        bottom: -75%;
-        width: 100%;
-        height: 100%;        
+        bottom: -42%;
+        right: -25%;
+        width: 90%;
+        height: 85%;        
         background: $darkgrey;
-        transform: skew(0,-25deg);
-        -webkit-transform: skew(0,-25deg);
-        -ms-transform: skew(0,-25deg);
-
-        &-paragraph {
-        transform: skew(0,0deg);
-        -webkit-transform: skew(0, 0deg);
-        -ms-transform: skew(0, 0deg);
+        
+        &-meetme {
+            @include skew (20deg);
+            font-size: 26px;
+            font-weight: 900;
+            margin: 30px 0 0 0;
         }
+
+        &-scrolldown {
+            @include skew (20deg);
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: 400;
+            margin: 0px;
+        }
+
+        &-arrow {
+            @include scroll-button (-25deg);
+            position: absolute;
+            top: -100px;
+        }
+
     }
 }
