--- a/src/app/shared/layouts/menu/menu.component.scss
+++ b/src/app/shared/layouts/menu/menu.component.scss
@@ -10,8 +10,16 @@
     to   { opacity: 1; }
 }
 
-.menu {
+.mat-drawer {
+    background-color: lightgrey!important;
+    width: 300px;
+    height: 800px;
+}
+
+
+.menu {    
     @include flex-styling;
+    z-index: 50;
     left: 0;
     width: 72px;
     height: 50px;
