--- a/src/assets/scss/base/_mixins.scss
+++ b/src/assets/scss/base/_mixins.scss
@@ -4,11 +4,33 @@
     flex-direction: column;
     justify-content: flex-start;
     padding: $padding;
-    margin-left: 72px;
+    margin: 72px;
     background: $color;
-    width: 100%;
+    width: calc(100% - 142px);
     height: 100%;
     color: $white;
+}
+
+@mixin scroll-button ($degree) {
+    width: 30px;
+    height: 30px;
+    margin-left: -12px;
+    border-left: 3px solid $white;
+    border-bottom: 3px solid $white;
+    transform: rotate($degree);
+    animation: arrow 1.5s infinite;
+    box-sizing: border-box;
+    animation-delay: .3s;
+    @-webkit-keyframes arrow {
+        0% { -webkit-transform: rotate($degree) translate(0, 0); opacity: 0; }
+        50% { opacity: 1; }
+        100% { -webkit-transform: rotate($degree) translate(-20px, 20px); opacity: 0; }
+    }
+    @keyframes arrow { 
+        0% { transform: rotate($degree) translate(0, 0); opacity: 0; }
+        50% { opacity: 1; }
+        100% { transform: rotate($degree) translate(-20px, 20px); opacity: 0; }
+    }
 }
 
 @mixin flex-styling () {
@@ -20,4 +42,10 @@
 @mixin menu-transition () {
     -webkit-transition-duration: 180ms;
     transition-duration: 180ms;
+}
+
+@mixin skew ($degree) {
+    transform: skew(0, $degree);
+    -webkit-transform: skew(0, $degree);
+    -ms-transform: skew(0, $degree);
 }
