--- a/src/app/blog-overview/blog-overview.component.html
+++ b/src/app/blog-overview/blog-overview.component.html
@@ -9,7 +9,7 @@
 
   <div class="blog-overview__list">
 
-    <div class="blog-overview__list-item">
+    <div routerLink="/blog" class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
       </div>
