--- a/src/app/blog-overview/blog-overview.component.scss
+++ b/src/app/blog-overview/blog-overview.component.scss
@@ -6,19 +6,29 @@
 
     &__header {
         @include skew (-5deg);
-        margin: -45px 0 0 0;
+        margin: -100px 0 0 0;
         background: $purple;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 350px;
 
         &-title {
             @include skew (5deg);
             font-size: 66px;
             font-weight: 700;
             text-transform: uppercase;
-            margin: 30px 0;
+            margin: 30px 0 0 -100px;
         }
 
         &-searchbar {
             @include skew (5deg);
+            height: 35px;
+            width: 284px;
+            margin: 130px 15px 0 0;
+            padding: 5px 15px;
+            border: none;
             background: $white;
             color: $purple;
 
@@ -27,16 +37,36 @@
     }
 
     &__list {
+        width: 110%;
+        height: 100%;
+        overflow-x: hidden;
         display: flex;
         flex-direction: row;
-        justify-content: space-around center;
         align-items: center;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
 
         &-item {
+            margin: 0 20px;
             background: $purple;
-            height: 300px;
-            width: 300px;
+            height: 250px;
+            width: 250px;
+
+            &:hover {
+                background: $white;
+                cursor: pointer;
+            }
+
+            &:hover &-date {
+                color: $purple;
+            }
+            
+            &:hover &-title {
+                color: $purple;
+            }
+
+            &:nth-of-type(even) {
+                margin-top: -150px;
+            }
 
             &-date {
                 font-size: 14px;
@@ -44,13 +74,14 @@
                 padding: 20px 20px 5px 20px;
                 font-style: italic;
                 color: $white;
+              
             }
 
             &-title {
                 font-size: 26px;
                 font-weight: 900;
                 padding: 0 20px 20px 20px;
-                color: $white;
+                color: $white; 
             }
 
         }
