--- a/src/app/project-overview/project/project.component.html
+++ b/src/app/project-overview/project/project.component.html
@@ -1,35 +1,37 @@
 <section class="project">
-  <section class="info">
-    <h1 class="info__title">
-      Project title bla bla        
-    </h1>
-    <h5 class="info__client">Client</h5>
-    <p class="info__client-name">Name of Client</p>
+  <section class="content-left">
+    <section class="info">
+      <h1 class="info__title">
+        Project title bla bla        
+      </h1>
+      <h5 class="info__client">Client</h5>
+      <p class="info__client-name">Name of Client</p>
 
-    <h5 class="info__date">Date</h5>
-    <p class="info__date-time">mm / dd / yyyy</p>
+      <h5 class="info__date">Date</h5>
+      <p class="info__date-time">mm / dd / yyyy</p>
 
-    <p class="info__paragraph">
+      <p class="info__paragraph">
         It won’t be a bigger problem to ﬁnd one video game lover in your neighbor. 
         Since the introduction of Virtual Game, 
         it has been achieving great heights so far as its popularity and technological advancement are concerned. 
         The history of video game is as interesting as a fairy tale.
         The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever. 
-        During the formulative years, video games were created by using various interactive electronic devices with various 
-        display formats. 
-        The ﬁrst ever video game was
-    </p>
-
-    <div class="info__link">
-      <i class="fa fa-link" aria-hidden="true">View online</i>
-    </div>
-
-    <div class="info__skill">
-      <h5 class="info__skill-title">Skills used</h5>
-      <p class="info__skill-items">
-        Angular 2, Grunt, Typescript, HTML, CSS, Gulp, Webpack, C#
       </p>
-    </div>
+
+      <div class="info__link">
+        <i class="fa fa-link" aria-hidden="true">View online</i>
+      </div>
+
+    </section>
+
+    <section class="skill">
+      <div class="skill__container">
+        <h5 class="skill__container-title">Skills used</h5>
+        <p class="skill__container-items">
+          Angular 2, Grunt, Typescript, HTML, CSS, Gulp, Webpack, C#
+        </p>
+      </div>
+    </section>
   </section>
 
   <section class="images">
@@ -39,25 +41,55 @@
   </section>
 
   <section class="sidemenu">  
-    <a class="sidemenu__btn" routerLink="/">
-      <h3 class="sidemenu__btn-number">1</h3>
-      <h4 class="sidemenu__btn-title">Title of project</h4>
-    </a>
-    <a class="sidemenu__btn" routerLink="/">
-      <h3 class="sidemenu__btn-number">2</h3>
-      <h4 class="sidemenu__btn-title">Title of project</h4>
-    </a>
-    <a class="sidemenu__btn" routerLink="/">
-      <h3 class="sidemenu__btn-number">3</h3>
-      <h4 class="sidemenu__btn-title">Title of project</h4>
-    </a>
-    <a class="sidemenu__btn" routerLink="/">
-      <h3 class="sidemenu__btn-number">4</h3>
-      <h4 class="sidemenu__btn-title">Title of project</h4>
-    </a>
-    <a class="sidemenu__btn" routerLink="/">
-      <h3 class="sidemenu__btn-number">5</h3>
-      <h4 class="sidemenu__btn-title">Title of project</h4>
-    </a>
+
+
+
+  <mat-sidenav-container class="example-container">
+      <mat-sidenav align="end" mode="over" #sidenav class="example-sidenav">
+          <a class="sidemenu__btn" routerLink="/">
+            <h3 class="sidemenu__btn-number">01</h3>
+            <h4 class="sidemenu__btn-title">Title of project</h4>
+          </a>
+          <a class="sidemenu__btn" routerLink="/">
+            <h3 class="sidemenu__btn-number">02</h3>
+            <h4 class="sidemenu__btn-title">Title of project</h4>
+          </a>
+          <a class="sidemenu__btn" routerLink="/">
+            <h3 class="sidemenu__btn-number">03</h3>
+            <h4 class="sidemenu__btn-title">Title of project</h4>
+          </a>
+          <a class="sidemenu__btn" routerLink="/">
+            <h3 class="sidemenu__btn-number">04</h3>
+            <h4 class="sidemenu__btn-title">Title of project</h4>
+          </a>
+          <a class="sidemenu__btn" routerLink="/">
+            <h3 class="sidemenu__btn-number">05</h3>
+            <h4 class="sidemenu__btn-title">Title of project</h4>
+          </a>
+      </mat-sidenav>
+    
+      <div class="example-sidenav-content">
+        <a type="button" mat-button (click)="sidenav.open()">
+          <h3 class="sidemenu__btn-number">01</h3>
+        </a>
+        <a type="button" mat-button (click)="sidenav.open()">
+          <h3 class="sidemenu__btn-number">02</h3> 
+        </a>
+        <a type="button" mat-button (click)="sidenav.open()">
+          <h3 class="sidemenu__btn-number">03</h3>
+        </a>
+        <a type="button" mat-button (click)="sidenav.open()">
+          <h3 class="sidemenu__btn-number">04</h3>
+        </a>
+        <a type="button" mat-button (click)="sidenav.open()">
+          <h3 class="sidemenu__btn-number">05</h3>
+        </a>
+      </div>
+    
+    </mat-sidenav-container>
+
+
+
   </section>
+  
 </section>
