All pages updated

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,5 @@
-<section class="about">
-    <section class="about-me">
+<div class="about">
+    <div class="about-me">
         <h1 class="about-me__title">
         About me.
         </h1>
@@ -24,15 +24,15 @@
             <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
             <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
         </div>
-    </section>
-    <section class="image">
+    </div>
+    <div class="image">
         <div class="image__item"><img src="http://via.placeholder.com/450x600"></div>
-    </section>
-    <section class="skew">
-        <div class="skew__scrolldown">
-            <p class="skew__scrolldown-paragraph">
-                View the projects i've worked on
-            </p>
-        </div>
-    </section>
-</section>
+    </div>
+</div>
+<div class="skew">
+    <div class="skew__scrolldown">
+        <p class="skew__scrolldown-paragraph">
+            View the projects i've worked on
+        </p>
+    </div>
+</div>
