--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <section class="wrapper">
     <app-menu></app-menu>
 
-        <section class="container">
+        <div class="container">
             <app-header></app-header>
             <router-outlet></router-outlet>
             <app-footer></app-footer>
-        </section>
+        </div>
 
     <app-sidebar></app-sidebar>
 </section>
+
