--- a/src/app/blog-overview/blog-overview.component.html
+++ b/src/app/blog-overview/blog-overview.component.html
@@ -1,4 +1,4 @@
-<section class="blog-overview">
+<div class="blog-overview">
   
   <div class="blog-overview__header">
     <h1 class="blog-overview__header-title">
@@ -6,9 +6,9 @@
     </h1>
     <input class="blog-overview__header-searchbar" placeholder="Search...">
   </div>
-
+  
   <div class="blog-overview__list">
-
+    
     <div routerLink="/blog" class="blog-overview__list-item">
       <div class="blog-overview__list-item-date">
         dd / mm / yyyy
@@ -17,36 +17,61 @@
         Are You Ready To Buy A Home Theater Audio System 
       </div>
     </div>
-
+    
     <div class="blog-overview__list-item">
-        <div class="blog-overview__list-item-date">
-          dd / mm / yyyy
-        </div>
-        <div class="blog-overview__list-item-title">
-          How To Put Movies On Iphone 
-        </div>
+      <div class="blog-overview__list-item-date">
+        dd / mm / yyyy
       </div>
-
-      <div class="blog-overview__list-item">
-        <div class="blog-overview__list-item-date">
-          dd / mm / yyyy
-        </div>
-        <div class="blog-overview__list-item-title">
-          Computer Hardware Desktops And Notebooks  
-        </div>
+      <div class="blog-overview__list-item-title">
+        How To Put Movies On Iphone 
       </div>
-
-      <div class="blog-overview__list-item">
-        <div class="blog-overview__list-item-date">
-          dd / mm / yyyy
-        </div>
-        <div class="blog-overview__list-item-title">
-          Are You Ready To Buy A Home Theater Audio System 
-        </div>
+    </div>
+    
+    <div class="blog-overview__list-item">
+      <div class="blog-overview__list-item-date">
+        dd / mm / yyyy
       </div>
-
-      <div class="blog-overview__list-arrow"></div>
-
+      <div class="blog-overview__list-item-title">
+        Computer Hardware Desktops And Notebooks  
+      </div>
+    </div>
+    
+    <div class="blog-overview__list-item">
+      <div class="blog-overview__list-item-date">
+        dd / mm / yyyy
+      </div>
+      <div class="blog-overview__list-item-title">
+        Are You Ready To Buy A Home Theater Audio System 
+      </div>
+    </div>
+    
+    <div class="blog-overview__list-item">
+      <div class="blog-overview__list-item-date">
+        dd / mm / yyyy
+      </div>
+      <div class="blog-overview__list-item-title">
+        How To Put Movies On Iphone 
+      </div>
+    </div>
+    
+    <div class="blog-overview__list-item">
+      <div class="blog-overview__list-item-date">
+        dd / mm / yyyy
+      </div>
+      <div class="blog-overview__list-item-title">
+        Computer Hardware Desktops And Notebooks  
+      </div>
+    </div>
+    
+    <div class="blog-overview__list-item">
+      <div class="blog-overview__list-item-date">
+        dd / mm / yyyy
+      </div>
+      <div class="blog-overview__list-item-title">
+        Are You Ready To Buy A Home Theater Audio System 
+      </div>
+    </div>
+    
   </div>
-
-</section>
+  
+</div>
