--- a/src/app/blog-overview/blog/blog.component.html
+++ b/src/app/blog-overview/blog/blog.component.html
@@ -1,4 +1,4 @@
-<section class="blog">
+<div class="blog">
     
     <div class="blog__header">
 
@@ -46,5 +46,5 @@
   
     </div>
   
-  </section>
+</div>
   
