--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,15 +3,15 @@
     Hi There,
   </h1>
   <p class="welcome__paragraph">
-    “Nice to meet you, I’m Jeroen a Front-end Developer”
+    “Nice to meet you, I’m Jeroen a Full-Stack Developer”
   </p>
-  <div class="welcome__skew">
-      <p class="welcome__skew-meetme">
-          Meet me!
-      </p>
-      <p class="welcome__skew-scrolldown">
-          Scroll down 
-      </p>
-      <div class="welcome__skew-arrow"></div>
-  </div>
+  <!-- <div class="skew">
+    <p class="skew-meetme">
+        Meet me!
+    </p>
+    <p class="skew-scrolldown">
+        Scroll down 
+    </p>
+    <div class="welcome__skew-arrow"></div>
+  </div> -->
 </section>
