--- a/src/app/shared/layouts/footer/footer.component.html
+++ b/src/app/shared/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
-<section class="footer">
+<div class="footer">
     <p class="footer__title">
-      Front-end developer
+      Full-Stack Developer
     </p>
-</section>
+  </div>
