--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -1,5 +1,5 @@
-<section class="header">
+<div class="header">
     <button class="header__title header__title--hover" routerLink="/home">
       Jeroen Ouwehand
     </button>
-</section>
+  </div>
