--- a/src/app/shared/layouts/sidebar/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar/sidebar.component.html
@@ -1,10 +1,6 @@
-<section class="sidebar">
-    <div class="sidebar__images">
-      <a href="https://github.com/jeroenouw" target="_blank">
-        <i class="fa fa-github-alt" aria-hidden="true"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/jeroen-ouwehand-a45b79b9/" target="_blank">
-        <i class="fa fa-linkedin" aria-hidden="true"></i>
-      </a>
-    </div>
-</section>
+<div class="sidebar">
+  <div class="sidebar__images">
+    <a href="https://github.com/jeroenouw" target="_blank" class="fa fa-github-alt" aria-hidden="true"></a>
+    <a href="https://www.linkedin.com/in/jeroen-ouwehand-a45b79b9/" target="_blank" class="fa fa-linkedin" aria-hidden="true"></a>
+  </div>
+</div>
