--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,15 +2,18 @@
 @import "./src/assets/scss/base/mixins";
 
 .about {
-    @include page-styling (50px 0 0 70px, $darkgrey);
+    display: flex;
+    justify-content: space-between;
     flex-direction: row;
-    width: calc(100% - 144px);
     flex-wrap: wrap;
+    padding: 50px;
+    background: $darkgrey;
+    color: $white;
+    position: relative;
 
     .about-me {
         width: 60%;
         z-index: 20;
-        overflow-y: scroll;
         height: 100%;
 
         &__title {
@@ -23,7 +26,6 @@
         &__paragraph {
             font-size: 16px;
             font-weight: 400;
-            width: 500px;
             margin: 10px 0;
         }
 
@@ -33,7 +35,6 @@
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
-            width: 455px;
             padding: 20px;
             
             &-item {
@@ -44,37 +45,32 @@
     }
     }
 
-    .image {        
-        width: 40%;
-        margin: -50px 0 0 0;
-        z-index: 20;
+}
 
-        &__item {
+.image {   
+    justify-content: flex-end;     
+    width: 450px;
+    margin: -50px -50px 0 0;
+    z-index: 20;
 
-        }
+    &__item {
 
     }
 
-    .skew {
-        @include skew (5deg);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
-        height: 200px;
-        background: $orange;
-        overflow: hidden;
-        margin: 0 0 110px -70px;
-        z-index: 40;
+}
+.skew {
+    @include skew (5deg);
+    bottom: 0px;
+    width: 100%;
+    height: 200px;
+    background: $orange;
+    overflow: hidden;
 
-        &__scrolldown {   
-            @include skew (-5deg); 
+    &__scrolldown {   
+        @include skew (-5deg); 
 
-            &-paragraph {
-                justify-content: center;
-            }
+        &-paragraph {
+            justify-content: center;
         }
     }
 }
