--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,40 +3,34 @@
 
 .wrapper {
     display: flex;
-    flex-direction: row;
-
+    height: 100vh;
+    overflow-y: hidden;
+    
     app-menu {
-        position: fixed;
+        align-items: center;
         display: flex;
         left: 0px;
         height: 100%;
-        width: 72px;
+        background-color: $white;
         z-index: 60;
     }
 
     .container {
-        min-height: 100%;
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        z-index: 20;
-
-        app-header {
-            display: flex;
-        }
-
-        app-footer {
-            display: flex;
-        }
-        
+        z-index: 20;        
     }
 
     app-sidebar {
-        position: fixed;
         display: flex;
+        justify-content: flex-end;
         right: 0px;
         height: 100%;
-        width: 72px;
+        background-color: $white;
         z-index: 60;
+        align-items: center;
     }
 
 }
