--- a/src/app/blog-overview/blog-overview.component.scss
+++ b/src/app/blog-overview/blog-overview.component.scss
@@ -3,6 +3,7 @@
 
 .blog-overview {
     @include page-styling (0, $darkgrey);
+    height: 100vh;
 
     &__header {
         @include skew (-5deg);
@@ -37,16 +38,16 @@
     }
 
     &__list {
-        width: 110%;
         height: 100%;
+        margin-top: 30px;
         overflow-x: hidden;
         display: flex;
         flex-direction: row;
         align-items: center;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
 
         &-item {
-            margin: 0 20px;
+            margin: 40px 15px 0 15px;
             background: $purple;
             height: 250px;
             width: 250px;
@@ -65,7 +66,7 @@
             }
 
             &:nth-of-type(even) {
-                margin-top: -150px;
+                margin-top: 150px;
             }
 
             &-date {
@@ -86,12 +87,6 @@
 
         }
 
-        &-arrow {
-            @include scroll-button (-45deg);
-            position: absolute;
-            right: 30px;
-            bottom: 190px;
-        }
     }
 
 }
