--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,8 +2,13 @@
 @import "./src/assets/scss/base/mixins";
 
 .welcome {
-    @include page-styling (50px 0 0 70px, $orange);
-
+    padding: 50px;
+    background: $orange;
+    color: $white;
+    height: 560px;
+    position: relative;
+    //// hackkieee change this
+    
     &__title {
         font-size: 150px;
         font-weight: 900;
@@ -19,38 +24,40 @@
         margin: 10px 0;
     }
 
-    &__skew {
-        @include skew (-20deg);
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        position: absolute;
-        bottom: -42%;
-        right: -25%;
-        width: 90%;
-        height: 85%;        
-        background: $darkgrey;
-        
-        &-meetme {
-            @include skew (20deg);
-            font-size: 26px;
-            font-weight: 900;
-            margin: 30px 0 0 0;
-        }
+}
 
-        &-scrolldown {
-            @include skew (20deg);
-            text-transform: uppercase;
-            font-size: 14px;
-            font-weight: 400;
-            margin: 0px;
-        }
+.skew {
+    @include skew (-20deg);
+    display: flex;
+    flex-direction: column;
+    text-align: center;         
+    background: $darkgrey;
+    height: 350px;
+    width: 50%;
+    position: absolute;
+    right: 20px;
+    z-index: 19;
+    bottom: -150px;
 
-        &-arrow {
-            @include scroll-button (-25deg);
-            position: absolute;
-            top: -100px;
-        }
-
+    &-meetme {
+        @include skew (20deg);
+        font-size: 26px;
+        font-weight: 900;
+        margin: 30px 0 0 0;
     }
+
+    &-scrolldown {
+        @include skew (20deg);
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 400;
+        margin: 0px;
+    }
+
+    &-arrow {
+        @include scroll-button (-25deg);
+        position: absolute;
+        top: -100px;
+    }
+
 }
