--- a/src/app/project-overview/project/project.component.scss
+++ b/src/app/project-overview/project/project.component.scss
@@ -1,39 +1,19 @@
 @import "./src/assets/scss/base/variables";
 @import "./src/assets/scss/base/mixins";
-.example-container {
-    margin: -49px 0 0 0;
-    width: 300px;
-  }
-  
-  .example-sidenav-content {
+
+.project {
     display: flex;
-    align-items: flex-end;
+    flex-direction: row;
     justify-content: center;
-    flex-direction: column;
-    background: $darkgrey;
-    height: 650px;
-    margin: 0 30px 0 0;
-  }
-  
-  .example-sidenav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    padding: 50px;
     background: $darkgrey;
     color: $white;
-    padding: 20px;
-    width: 280px;
-  }
-.project {
-    @include page-styling (50px 0 0 70px, $darkgrey);
-    flex-direction: row;
-
+    position: relative;
+    
     .content-left {
         display: flex;
         flex-direction: column;
-        width: 35%;
-
+        
         .info {
             
             &__title {
@@ -42,34 +22,34 @@
                 margin: 30px 0;
                 word-wrap: break-word;
             }
-
+            
             &__client {
                 font-size: 14px;
                 font-weight: 700;
                 text-transform: uppercase;
                 margin: 0px;
-
+                
                 &-name {
                     font-size: 16px;
                     font-style: italic;
                     margin: 0px;
                 }
-
+                
             }
-
+            
             &__date {
                 font-size: 14px;
                 font-weight: 700;
                 text-transform: uppercase;
                 margin: 10px 0 0 0;
-
+                
                 &-time {
                     font-style: italic;
                     margin: 0 0 10px 0;
                 }
-
+                
             }
-
+            
             &__paragraph {
                 font-size: 16px;
                 font-weight: 400;
@@ -77,16 +57,16 @@
                 margin: 10px 0;
                 word-wrap: break-word;
             }
-
+            
             &__link {
                 font-size: 16px;
                 font-weight: 900;
                 text-transform: uppercase;
-
+                
             }
-
+            
         }
-
+        
         .skill {
             @include skew (-8deg);
             display: flex;
@@ -98,17 +78,17 @@
             height: 250px;
             width: 38%;
             background: $lightgreen;
-
+            
             &__container {
                 margin: -60px 0 0 30px;
-
+                
                 &-title {
                     @include skew (8deg);
                     text-transform: uppercase;
                     margin: 0;
-
+                    
                 }
-
+                
                 &-items {
                     @include skew (8deg);
                     font-style: italic;
@@ -116,60 +96,105 @@
                     width: 100%;
                     word-wrap: break-word;
                 }
-            
+                
             }
-
+            
         }
         
     }
-
+    
     .images {
-        margin: -49px 0 0 0;
-        max-width: 600px;
-        max-height: 600px;
-
+        margin: -50px 0 0 0;
+        max-width: 100%;
+        max-height: 100%;
+        z-index: 40;
+        
         &__item {
-
+            
             &-wide {
-                height: 300px;
+                background-color: #eee;
+                height: 50vh;
                 width: 600px;
             }
-    
+            
             &-small {
+                background-color: #ddd;
                 display: table-cell;
-                height: 300px;
+                height: 50vh;
                 width: 300px;
             }
-
+            
         }
-
+        
     }
-
+    
     .sidemenu {
         background: $darkgrey;
         height: 100%;
 
+        &__container {
+            margin: -50px -70px 0 0;
+            width: 300px;
+            z-index: 20;
+        }
+        
+        &__sidenav-outside {
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            flex-direction: column;
+            background: $darkgrey;
+            height: 650px;
+            width: 280px;
+            margin: 0 30px 0 0;
+        }
+        
+        &__sidenav-inside {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            background: $darkgrey;
+            color: $white;
+            padding: 20px;
+            width: 280px;
+            z-index: 60;
+        }
+        
         &__btn {
             display: inline-flex;
-            width: 240px;
-
+            text-decoration: none;
+            width: 190px;
+            
+            &:focus {
+                outline: none;
+            }
+            
+            &:hover {
+                background: $lightgreen;
+                cursor: pointer;
+            }
+            
+            &:hover &-number {
+                margin: 10px;
+                background: $lightgreen;
+            }
+            
+            &:hover &-title {
+                background: $lightgreen;
+            }
+            
             &-number {
                 color: $white;
-                text-decoration: none;
+                margin: 6px;
                 cursor: pointer;
-
-                &:hover {
-                    background-color: $lightgreen;
-                }
-
             }
-
+            
             &-title {
+                margin: 8px 10px 6px 15px;
                 color: $white;
-                text-decoration: none;
-
             }
         }
-
+        
     }
 }
