--- a/src/app/shared/layouts/header/header.component.scss
+++ b/src/app/shared/layouts/header/header.component.scss
@@ -1,12 +1,12 @@
 @import "./src/assets/scss/base/variables";
 
 .header {
-    position: fixed;
-    width: 100%;
+    width: 100%; 
     display: flex;
     justify-content: center;
     background: $white;
     z-index: 20;
+    position: relative;
 
     &__title {
         background: $white;
@@ -21,5 +21,7 @@
         &:hover {
             color: $orange;
         }
+
     }
+
 }
